# iikanji-kakiebo-client-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: api-reference.md  examples.md  getting-started.md
src/iikanji/: __init__.py  client.py  exceptions.py  llm.py  models.py
tests/: test_client.py
